@@ -276,6 +276,9 @@ ifneq (,$(filter armel,$(DEB_HOST_ARCH)))
 MOZ_DEFINES += -DMOZ_ENABLE_THUMB
 endif
 endif
+ifneq (,$(DEB_PARALLEL_JOBS))
+MOZ_DEFINES += -DDEB_PARALLEL_JOBS=$(DEB_PARALLEL_JOBS)
+endif
 
 DEBIAN_EXECUTABLES = $(MOZ_PKG_NAME)/$(MOZ_LIBDIR)/$(MOZ_PKG_BASENAME).sh \
 		     $(NULL)
