@@ -95,8 +95,11 @@ firefox-trunk (15.0~a1~hg20120515r93983-0ubuntu1) UNRELEASED; urgency=low
   * Update StartupWMClass to the correct name
     - update debian/firefox.desktop.in
     - update debian/rules
+  * Support the "parallel" option in DEB_BUILD_OPTIONS
+    - update debian/build/mozbuild.mk
+    - update debian/config/mozconfig.in
 
- -- Chris Coulson <chris.coulson@canonical.com>  Tue, 29 May 2012 00:11:45 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 31 May 2012 18:02:54 +0100
 
 firefox-trunk (14.0~a1~hg20120424r92149-0ubuntu1) precise; urgency=low
 
